made URL work with directories that have character spaces for color change